--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,32 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    implementation group: 'org.telegram', name: 'telegrambots', version: '5.2.0'
+    // https://mvnrepository.com/artifact/com.github.theholywaffle/teamspeak3-api
+    implementation group: 'com.github.theholywaffle', name: 'teamspeak3-api', version: '1.0.14'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    // https://github.com/google/gson/blob/master/UserGuide.md#TOC-Gson-With-Maven
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version,
+                'Main-Class': 'org.hopto.ts3s.monitor_unicbot.MonitorUnicbotApplication')
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
